# RayMMA

./: .gitignore  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md  REUSE.toml  SECURITY.md  THIRD_PARTY.md
.github/ISSUE_TEMPLATE/: benchmark-result.yml
.github/workflows/: cpu-algebra.yml  reuse.yml
docs/: GITHUB_POST.md  LAMBDA_CLOUD.md  METHOD.md  RELATED_WORK.md  RELEASE_CHECKLIST.md  REPOSITORY_PROFILE.md  REPRODUCIBILITY.md  RESULTS.md  RESULTS_RTX3050TI.md
prototype/: ALGEBRA.md  README.md  tensor_ray_triangle_wmma.cu  verify_algebra.py
results/: README.md  cloud-gpu-comparison-2026-07-21.csv
results/lambda-a10-2026-07-21/: README.md  SHA256SUMS  benchmark-ldd.txt  commands.txt  commit.txt  environment.txt  grid-primary-e0e1e2.csv  grid-primary-uvt-depthsorted.csv  grid-primary-validated.csv  grid-secondary-e0e1e2.csv  grid-secondary-uvt-depthsorted.csv  grid-secondary-validated.csv  raymma-cloud-results.tar.gz.sha256  source-sha256.txt
results/lambda-a100-2026-07-21/: README.md  SHA256SUMS  benchmark-ldd.txt  commands.txt  commit.txt  environment.txt  grid-primary-e0e1e2.csv  grid-primary-uvt-depthsorted.csv  grid-primary-validated.csv  grid-secondary-e0e1e2.csv  grid-secondary-uvt-depthsorted.csv  grid-secondary-validated.csv  raymma-cloud-results.tar.gz.sha256  source-sha256.txt
results/lambda-b200-availability-2026-07-21/: README.md  final-state.txt
results/lambda-h100-2026-07-21/: README.md  SHA256SUMS  benchmark-ldd.txt  commands.txt  commit.txt  environment.txt  git-status.txt  grid-primary-e0e1e2.csv  grid-primary-uvt-depthsorted.csv  grid-primary-validated.csv  grid-secondary-e0e1e2.csv  grid-secondary-uvt-depthsorted.csv  grid-secondary-validated.csv  raymma-cloud-results.tar.gz.sha256  source-sha256.txt
results/rtx3050ti-coastal-cliff-2026-07-21/: README.md  SHA256SUMS  SOURCE_SHA256SUMS  ctest.txt  e0e1e2-high-leaf256.csv  e0e1e2-high-leaf256.txt  e0e1e2-leaf16.csv  e0e1e2-leaf16.txt  environment.txt  high-leaf-sweep.csv  high-leaf-sweep.txt  uvt-depthsorted-high-leaf256.csv  uvt-depthsorted-high-leaf256.txt  uvt-depthsorted-leaf16.csv  uvt-depthsorted-leaf16.txt  validated-leaf16.csv  validated-leaf16.txt  validated-leaf256.csv  validated-leaf256.txt  validated-secondary-leaf16.csv  validated-secondary-leaf16.txt
results/rtx3050ti-grid-2026-07-19/: README.md  environment.txt  raw.csv  stdout.txt
results/rtx3050ti-pushed-5e05391-2026-07-21/: README.md  SHA256SUMS  checker-high-leaf-sweep.csv  checker-high-leaf-sweep.txt  ctest.txt  environment.txt  grid-bvh-sweep.csv  grid-bvh-sweep.txt  primary-leaf16.csv  primary-leaf16.txt  primary-leaf256.csv  primary-leaf256.txt  reuse-lint.json  secondary-leaf16.csv  secondary-leaf16.txt
src/: live_viewer.cu  production_bvh.h  research_benchmark.cu  tinybvh_builder.cpp  viewer.cpp
tools/: capture_environment.sh  export_public_tree.sh  extract_checker_triangles.py  extract_scene_triangles.py  fetch_benchmark_scenes.sh  fetch_open_model.sh  lambda_cloud.py  plot_cloud_comparison.py  run_a100.sh  run_cloud_gpu.sh  test_lambda_cloud.py  watch_lambda_b200.sh
